// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox snapshots Checkbox: 0 1`] = `
<div
  className="checkbox-0-1-6"
>
  <input
    checked={false}
    className="checkbox_input-0-1-7"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-8"
  />
  <label
    className="label-0-1-11 checkbox_label-0-1-9"
    slot="label"
  >
    Default
  </label>
</div>
`;

exports[`checkbox snapshots Checkbox: 1 1`] = `
<div
  className="checkbox-0-1-18"
>
  <input
    checked={true}
    className="checkbox_input-0-1-19"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-20"
  />
  <label
    className="label-0-1-23 checkbox_label-0-1-21"
    slot="label"
  >
    Checked (controlled)
  </label>
</div>
`;

exports[`checkbox snapshots Checkbox: 2 1`] = `
<div
  className="checkbox-0-1-30 checkbox__disabled-0-1-34"
>
  <input
    checked={false}
    className="checkbox_input-0-1-31"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-32"
  />
  <label
    className="label-0-1-35 checkbox_label-0-1-33"
    slot="label"
  >
    Disabled
  </label>
</div>
`;

exports[`checkbox snapshots Checkbox: 3 1`] = `
<div
  className="checkbox-0-1-42"
>
  <input
    checked={false}
    className="checkbox_input-0-1-43"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-44"
  />
  <label
    className="label-0-1-47 checkbox_label-0-1-45"
    slot="label"
  >
    Indeterminate
  </label>
</div>
`;

exports[`checkbox snapshots Checkbox: 4 1`] = `
<div
  className="checkbox-0-1-54"
>
  <input
    checked={true}
    className="checkbox_input-0-1-55"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_stateIndicator-0-1-56"
  />
  <label
    className="label-0-1-59 checkbox_label-0-1-57"
    slot="label"
  >
    Indeterminate checked (controlled)
  </label>
</div>
`;
